fix planner announcement grid being slightly misaligned with actual planner grid

--- a/app/planner/PlannerPage.styl
+++ b/app/planner/PlannerPage.styl
@@ -8,7 +8,7 @@
 	.plannerHeader
 		border-bottom: solid 1px black
 		display: flex
-		padding-left: 16.13rem
+		padding-left: 16.1rem
 
 		.plannerHeaderColumn
 			flex: 1
